--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,14 +4,148 @@
  * @huxpro
  */
 
+// Color
+$bgColor:   rgb(254,239,210);
+$gray:      rgb(187,175,162);
+$darkgray:  rgb(142,132,138);
+$dark:      rgb(83,82,80);
+$orange:    rgb(247,148,40);
+$em:       rgb(211,80,65);
+
 // Base
 html {
   font-family: sans-serif;
+  background: $bgColor;
+  color: $dark;
 }
-
-* {
-  box-sizing: border-box;
+.cached{
+  display: none;
 }
 
 
 // UI.
+$bead: 64px;
+$peg: $bead + 8px;
+
+.canvas{
+  h1{
+    font-size: 1em;
+    margin:1em;
+    color: $gray;
+  }
+  height: 500px;
+  width: 900px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -250px;
+  margin-left: -450px;
+  border: 1px dashed $darkgray;
+}
+
+.holder{
+  position: absolute;
+  bottom: 50px;
+  width: 450px;
+  &.game{
+    left: 15px;
+  }
+  &.goal{
+    right: 0px;
+  }
+  .intro{
+    position: absolute;
+    bottom: -30px;
+    width: 95%;
+    text-align: center;
+    color: $darkgray;
+
+  }
+  .peg{
+    position: absolute;
+    bottom: 30px;
+    width: auto;
+    padding: 5px;
+    border: 2px dashed $gray;
+    transition: all 0.2s ease;
+    &:hover{
+      border: 2px dashed $dark;
+      cursor: pointer;
+    }
+    &:nth-child(1){
+      height: $bead * 3;
+      left: $peg
+    }
+    &:nth-child(2){
+      height: $bead * 2;
+      left: $peg * 2 + 30px;
+    }
+    &:nth-child(3){
+      height: $bead;
+      left: $peg * 3 + 60px;
+    }
+  }
+}
+
+.bead{
+  width: 60px;
+  height: 60px;
+  border: 2px solid $bgColor;
+  background: $darkgray;
+  border-radius: 50%;
+  &.bead-r{
+    background: #FF7575;
+  }
+  &.bead-g{
+    background: #81D681;
+  }
+  &.bead-b{
+    background: #BEBEEC;
+  }
+}
+
+
+// UI - modal
+.modal{
+  position: fixed;
+  z-index: 998001;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  background: rgba(0,0,0,0.5);
+  text-align: center;
+  &>div{
+    width: 300px;
+    height: 300px;
+    background: rgb(70,85,103);
+    color: white;
+    padding: 20px;
+    border-radius: 2px;
+    box-shadow: 0 8px 20px 0 rgba(0,0,0,0.2);
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  button{
+    background: rgb(120,192,153);
+    width: 80%;
+    height: 50px;
+    margin: 20px auto;
+    color: white;
+    border: 0px;
+    outline: 0px;
+    border-radius: 50px;
+    transition: all 0.2s ease;
+    &:hover{
+      background: rgba(120,192,153,0.7);
+    }
+  }
+}
