--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,7 +28,7 @@ $bead: 64px;
 $peg: $bead + 8px;
 
 .canvas{
-  h1{
+  h1, h2{
     font-size: 1em;
     margin:1em;
     color: $gray;
@@ -187,5 +187,19 @@ $peg: $bead + 8px;
     &:hover{
       background: rgba(120,192,153,0.7);
     }
+  }
+  input{
+    display: block;
+    width: 77%;
+    margin: 0 auto;
+    border: 0px;
+    border-radius: 0px;
+    border-bottom: 1px solid #BFBFC0;
+    padding-top: 20px;
+    background: transparent;
+    overflow: hidden;
+    outline: none;
+    font-size: 15px;
+    font-family: inherit;
   }
 }
